--- a/travel-app/src/app/components/splash-screen.scss
+++ b/travel-app/src/app/components/splash-screen.scss
@@ -8,9 +8,10 @@
     img {
         -webkit-animation-name: splashScreen;
         animation-name: splashScreen;
+        -webkit-animation-duration: 6s;
+        animation-duration: 6s;
         height: auto;
         width: 100px;
-        ;
     }
 }
 
