--- a/travel-app/src/app/App.css
+++ b/travel-app/src/app/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #4498aa;
+  height: auto;
 }
 
 .App-logo {
@@ -19,5 +21,5 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #cc0e04;
 }
