--- a/travel-app/src/app/index.css
+++ b/travel-app/src/app/index.css
@@ -1,8 +1,9 @@
 :root {
   --primary: #848FA5;
-  --secondary: #31081F;
-  --tertiary: #6B0F1A;
-  --accent: #FF7D00;
+  --secondary: #d2e5a7;
+  --redtext: #EA463F;
+  --tertiary: #4498aa;
+  --accent: #393B54;
 
   --clampFont: clamp(1rem, 0.6795rem + 1.7094vw, 1.5rem);
   --clampH1: clamp(1.25rem, 0.9295rem + 1.7094vw, 1.75rem);
@@ -10,10 +11,9 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--primary);
+  color: var(--redtext);
 }
 
 h1 {
@@ -21,6 +21,11 @@ h1 {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Roboto", sans-serif;
+}
+
+button{
+  font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-style: normal;
 }
