latest splash screen

--- a/travel-app/src/app/components/splash-screen.css
+++ b/travel-app/src/app/components/splash-screen.css
@@ -6,36 +6,19 @@
   justify-content: center;
   flex-direction: column;
 }
-
 .splash-screen img {
-  -webkit-animation-name: splashScreen;
   animation-name: splashScreen;
-  -webkit-animation-duration: 6s;
   animation-duration: 6s;
   height: auto;
   width: 100px;
 }
-
-@-webkit-keyframes splashScreen {
-  from {
-    opacity: 0;
-    transform: scale(1.4);
-  }
-
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
 @keyframes splashScreen {
   from {
     opacity: 0;
     transform: scale(1.4);
   }
-
   to {
     opacity: 1;
     transform: scale(1);
   }
-}
+}/*# sourceMappingURL=splash-screen.css.map */
