--- a/travel-app/src/app/components/Translate.scss
+++ b/travel-app/src/app/components/Translate.scss
@@ -139,6 +139,11 @@
                 }
             }
 
+            .select {
+                [id*="-placeholder"] {
+                    white-space: nowrap;
+                }
+            }
 
             select {
                 color: #333;
