--- a/travel-app/src/app/components/Translate.css
+++ b/travel-app/src/app/components/Translate.css
@@ -112,6 +112,9 @@
   transition: transform 0.2s ease;
   justify-content: center;
 }
+.translateContainer .controls .row .select [id*=-placeholder] {
+  white-space: nowrap;
+}
 .translateContainer .controls .row select {
   color: #333;
   border: none;
