Hinzufügen von Kommentaren in den SCSS Dateien

--- a/travel-api/public/stylesheets/style.scss
+++ b/travel-api/public/stylesheets/style.scss
@@ -1,3 +1,9 @@
+/********************************
+ * Wenn Änderungen in der CSS vorgenommen werden, 
+ * werden diese ÜBERSCHRIEBEN, 
+ * da sie von der gleichnamigen SCSS generiert werden !!!!
+********************************/
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
