--- a/travel-app/src/app/components/ProgressBar.scss
+++ b/travel-app/src/app/components/ProgressBar.scss
@@ -1,3 +1,9 @@
+/********************************
+ * Wenn Änderungen in der CSS vorgenommen werden, 
+ * werden diese ÜBERSCHRIEBEN, 
+ * da sie von der gleichnamigen SCSS generiert werden !!!!
+********************************/
+
 .progress {
     &-container {
         height: 100vh;
