--- a/travel-app/src/app/components/ProgressBar.css
+++ b/travel-app/src/app/components/ProgressBar.css
@@ -1,3 +1,9 @@
+@charset "UTF-8";
+/********************************
+ * Wenn Änderungen in der CSS vorgenommen werden, 
+ * werden diese ÜBERSCHRIEBEN, 
+ * da sie von der gleichnamigen SCSS generiert werden !!!!
+********************************/
 .progress-container {
   height: 100vh;
   width: 100vw;
