--- a/travel-app/src/app/components/Translate.scss
+++ b/travel-app/src/app/components/Translate.scss
@@ -1,3 +1,9 @@
+/********************************
+ * Wenn Änderungen in der CSS vorgenommen werden, 
+ * werden diese ÜBERSCHRIEBEN, 
+ * da sie von der gleichnamigen SCSS generiert werden !!!!
+********************************/
+
 .translateContainer {
     width: calc(100vw - 80px);
     padding: 30px;
